// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle keyword with dashes 1`] = `
# Title

Paragraph 1.

Paragraph 2.

`;

exports[`should handle keyword with spaces 1`] = `
# Title

Paragraph 1.

Paragraph 2.

`;

exports[`should handle mdx 1`] = `
import something from 'something';

export const meta = {
    prop: 'value'
};

# Title

Paragraph 1.

Paragraph 2.

`;

exports[`should handle no spacing in exceprt comment 1`] = `
# Title

Paragraph 1.

Paragraph 2.

`;

exports[`should return after excerpt when multiple exist 1`] = `
# Title

Paragraph 1.

`;

exports[`should return excerpt using "exceprt" keyword 1`] = `
# Title

Paragraph 1.

Paragraph 2.

`;

exports[`should return excerpt using "more" keyword 1`] = `
# Title

Paragraph 1.

Paragraph 2.

`;

exports[`should return excerpt using "preview" keyword 1`] = `
# Title

Paragraph 1.

Paragraph 2.

`;

exports[`should return excerpt using custom keyword 1`] = `
# Title

Paragraph 1.

Paragraph 2.

`;

exports[`should return unmodified document when no excerpt exists 1`] = `
# Title

Paragraph 1.

Paragraph 2.

Paragraph 3.

Paragraph 4.

`;
